# JALO

./: .gitmodules  CMakeLists.txt  README.md
blender/: shop1.blend  shop1.blend1  shop1_2.blend  shop1_3.blend
configs/: vision.config
include/: Camera.h  Config.h  MathUtils.h  Person.h  Room.h
models/: 1st_Floor.stl  Martian_Home_version2.stl  room1.stl
models/shop1/: 1.stl  10.stl  11.stl  12.stl  13.stl  14.stl  15.stl  16.stl  17.stl  18.stl  19.stl  2.stl  20.stl  21.stl  22.stl  23.stl  24.stl  25.stl  26.stl  27.stl  28.stl  3.stl  4.stl  5.stl  6.stl  7.stl  8.stl  9.stl
models/shop1_2/: 1.stl  10.stl  11.stl  12.stl  15.stl  17.stl  20.stl  21.stl  23.stl  24.stl  26.stl  27.stl  29.stl  3.stl  30.stl  31.stl  32.stl  5.stl  6.stl  9.stl
models/shop1_3/: 1.stl  12.stl  13.stl  15.stl  2.stl  21.stl  22.stl  23.stl  24.stl  26.stl  29.stl  32.stl  35.stl  4.stl  7.stl  8.stl  ad1.stl  ad2.stl  ad3.stl  ad4.stl  ad5.stl  ad6.stl  ad7.stl  ad8.stl
src/: Camera.cpp  Config.cpp  MathUtils.cpp  Person.cpp  Room.cpp  main.cpp  shoulder_test.py  shoulders.cpp  summary.cpp
web/jalo/: manage.py
web/jalo/jalo/: settings.py  urls.py  wsgi.py
web/jalo/jalo_display/: apps.py  models.py  views.py
web/jalo/jalo_display/migrations/: 0001_initial.py  0002_auto_20191004_0937.py  0003_auto_20191004_0951.py
web/jalo/jalo_display/static/css/: main.css
web/jalo/jalo_display/static/js/: scroll.js
web/jalo/jalo_display/static/pages/: index.html  wrapper.html
